[package]
name = "tracelog"
version = "0.1.0"
authors = ["phonkee <phonkee@phonkee.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = "0.14"
tonic = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
